<resources>
    <string name="app_name">Fannap</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="protocol">Protocol</string>
    <string name="report">Report</string>
    <string name="manageprotocol">"Protocol Management "</string>
    <string name="managmentport">Port Management</string>
    <string name="memorymanagment">Memory Management</string>
    <string name="craeateshell">Create a shell</string>
    <string name="craeatenode">Create Node</string>
    <string name="edgeprocess">Edge Process</string>
    <string name="monitoring">Monitoring</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="keepwill">keepwill</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_profile">My Profile</string>
    <string name="change_photo">Change Profile Photo</string>
    <string name="change_password">Change Password</string>
    <string name="edit_my_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="mqttBrokersList">MQTT Brokers List</string>
    <string name="brokerName">Broker Name</string>
    <string name="port">Port</string>
    <string name="address">Address</string>
    <string name="tagManagment">Tag Management</string>
    <string name="clientName">Client Name</string>
    <string name="clientID">Client ID</string>
    <string name="sendTimeStamp">Send TimeStamp</string>
    <string name="tagmanagment">Tag Management</string>
    <string name="clientname">Client Name</string>
    <string name="clientid">Client ID</string>
    <string name="host">Host</string>
    <string name="keepAlive">Keep Alive</string>
    <string name="userName">User Name</string>
    <string name="usermanagement">User Management</string>
    <string name="specificsetting">Pro. Settings</string>
    <string name="globalsetting">Settings</string>
    <string name="convertprotocol">Convert Protocol</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="serial">Serial</string>
    <string name="wifi">Wifi</string>
    <string name="gps">GPS</string>
    <string name="lanport1">Lan Port 1</string>
    <string name="lanport2">Lan Port 2</string>
    <string name="lanport3">Lan Port 3</string>
    <string name="lanport4">Lan Port 4</string>
    <string name="lanport5">Lan Port 5</string>
    <string name="lanport6">Lan Port 6</string>
    <string name="password">Password</string>
    <string name="compitable3.1.1">Comptipable Mqtt 3.1.1</string>
    <string name="blesetting">Bluetooth Setting</string>
    <string name="save">Save</string>
    <string name="enterblesetting">Please enter the Bluetooth port settings on this page.</string>
    <string name="networksetting">Network Setting</string>
    <string name="enterlansetting">Please enter the LAN port settings on this page.</string>
    <string name="protocolmanagement">Protocol management</string>
    <string name="history">History</string>
    <string name="serialsetting">Serial Port Confiiguration</string>
    <string name="specifystatusRS485port">Please specify the status of the RS485 port.</string>
    <string name="cancel">Cancel</string>
    <string name="addprotocol">Add Protocol</string>
    <string name="listauthorizedprotocols">List of authorized protocols</string>
    <string name="broker">Broker</string>
    <string name="maxclient">Max Client</string>
    <string name="qos">QOS</string>
    <string name="retainmessage">Retain Message</string>
    <string name="reconnect">Reconnect</string>
    <string name="connecttimout">connect timeout(ms)</string>
    <string name="keepstatus">keep Status</string>
    <string name="willtopic">Will Topic</string>
    <string name="willQos">Will Qos</string>
    <string name="cleanwill">Clean Session</string>
    <string name="switch_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="wifi_setting">تنظیمات WIFI</string>
    <string name="wifi_setting_desc">لطفا در این صفحه تنظیمات درگاه Wifi را ثبت نمایید.</string>
    <string name="ip_address">ip</string>
    <string name="mask">mask</string>
    <string name="auto_connect">اتصال اتوماتیک</string>
    <string name="dns">dns</string>
    <string name="default_gateway">default gateway</string>
    <string name="manage_stored_networks">مدیریت شبکه های ذ‌خیره شده</string>
    <string name="return_text">بازگشت</string>
    <string name="dhcp_text">dhcp</string>
    <string name="cleansession">Clean Session</string>
    <string name="sendtimestamp">Send Time Stamp</string>
    <string name="willpayload">Will Payload</string>
    <string name="ip">IP</string>
    <string name="brokerid">BrokerID</string>
    <string name="maxlenght">Max Lenght</string>
    <string name="maxquelenght">Max Que Lenght</string>
    <string name="compatiblemqttversition3">compatible with Mqtt 3.1.1</string>
    <string name="maintaine">Maintaine Will</string>
    <string name="willcardsub">Willcard Sub</string>
    <string name="sessiontime">Session Time</string>
    <string name="tagmanagement">TagManagement</string>
    <string name="access">Access</string>
    <string name="tagname">Tag Name</string>
    <string name="topic">Topic</string>
    <string name="type">Type</string>
    <string name="operation">Operation</string>
    <string name="topicname">Topic Name</string>
    <string name="scheduling">Scheduling</string>
    <string name="SystemName">SystemName</string>
    <string name="name">Name</string>
    <string name="retain">Retain</string>
    <string name="Private">Private</string>
    <string name="confirm">Confirm</string>
    <string name="mqtt">MQTT</string>
    <string name="gateway">gateway</string>
    <string name="autoconnect">Aut Connect</string>
    <string name="dhcp">DHCP</string>
    <string name="savednetwork">Saved Network</string>
    <string name="refresh">refresh</string>
    <string name="active">Active</string>
    <string name="wifidesc">Please Seltect WiFi</string>
    <string name="connected">Connected</string>
    <string name="devicename">Device Name</string>
    <string name="deviceid">Device ID</string>
    <string name="serverlist">Slave List</string>
    <string name="modbustcp">ModbusTCP</string>
    <string name="Baudrate">Baud Rate</string>
    <string name="parity">Parity</string>
    <string name="startbit">Start Bit</string>
    <string name="Stopbit">Stop Bit</string>
    <string name="databit">Data Bit</string>
    <string name="modbusaddress">ModBus Address</string>
    <string name="tagid">Tag ID</string>
    <string name="serverid">Server ID</string>
    <string name="functioncode">Function Code</string>
    <string name="datatype">Data Type</string>
    <string name="interval">Interval Time</string>
    <string name="description">Description</string>
    <string name="modbusrtu">ModBus RTU</string>
    <string name="s7">S7</string>
    <string name="plcsetting">"PLC Configuration "</string>
    <string name="datablock">Data Block</string>
    <string name="operationblock">Function Block</string>
    <string name="plcname">PLC Name</string>
    <string name="plcid">PLC ID</string>
    <string name="test">Test</string>
    <string name="datablocksetting">DataBlock Tag Setting</string>
    <string name="iotagsetting">IO Tag Setting</string>
    <string name="memorytagsetting">Memory Tag Configuration</string>
    <string name="plc">PLC</string>
    <string name="datablockcount">DataBlock Count</string>
    <string name="tagtype">Tag Type</string>
    <string name="writableornot">Writable / Not writable</string>
    <string name="iotype">IO Type</string>
    <string name="wordcount">Word Number</string>
    <string name="bytecount">Byte Number</string>
    <string name="bitcount">Bit Number</string>
    <string name="forget">Forget</string>
    <string name="blockdataid">Data Block ID</string>
    <string name="mqttbroker">MQTT Broker</string>
    <string name="mqttclient">MQTT Client</string>
    <string name="timeout">Time out</string>
    <string name="convertto">Convert to</string>
    <string name="s7setting">S7 Settings</string>
    <string name="plclist">PLC List</string>
    <string name="deletedialog">Are you sure to delete  ?</string>
    <string name="deleteunavailable">In order to delete you have to delete tags and than try again later</string>
    <string name="fbname">FB Name</string>
    <string name="fbnumber">FB Number</string>
    <string name="parametername">Parameter Name</string>
    <string name="functionblocklist">Function Block List</string>
    <string name="slavename">Slave name</string>
    <string name="slaveid">Slave id</string>
    <string name="functionblockname">Function Block Name</string>
    <string name="Functionblocknumber">Function Block Number</string>
    <string name="addparameter">Add Parameter</string>
    <string name="parametertype">Parameter Type</string>
    <string name="Prove">Yes</string>
    <string name="Disprove">No</string>
    <string name="Function">Function</string>
    <string name="FunctionBlock">Function Block</string>
    <string name="MQTTConf">MQTT Client Configuration</string>
    <string name="DataBlockconf">Data Block Configuration</string>
    <string name="DBtagconf">Data Block Tag Configuration</string>
    <string name="FBconf">Function Block Configuration</string>
    <string name="PLCconf">PLC Configuration</string>
    <string name="Parameterdef">Parameter Definition</string>
    <string name="Slaveconfrtu">RTU Slave Configuration</string>
    <string name="Slaveconftcp">TCP Slave Configuration</string>
    <string name="rtutagconf">RTU Tag Configuration</string>
    <string name="tagtcpconf">TCP Tag Configuration</string>
    <string name="iotagconf">I/O Tag Configuration</string>
    <string name="mqtttagconf">MQTT Tag Configuration</string>
    <string name="brokerconf">Broker Configuration</string>
    <string name="mqttclientlist">MQTT Client List</string>
    <string name="memoaddress">Memory Address</string>
    <string name="datablocklist">Data Block List</string>
    <string name="datablockid">Data Block ID</string>
    <string name="datablockname">Data Block Name</string>
    <string name="intervalbrokertaglist">Interval Broker Tag List</string>
    <string name="modbusrtuconf">Modbus-RTU Master Configuration</string>
    <string name="modbustcpconf">Modbus-TCP Master Configuration</string>
    <string name="parameterlist">Parameters List</string>
    <string name="datablocktagsetting">Data Block Tag Configuration</string>
    <string name="slavelist">Slave List</string>
    <string name="taglist">Tag List</string>
    <string name="datablocktaglist">Data Block Tag List</string>
    <string name="iotaglist">I/O Tag List</string>
    <string name="memotaglist">Memory Tag List</string>
    <string name="topiclist">Topic List</string>
    <string name="enabledisable">Enable / Disable</string>
    <string name="serialportactivation">Active / Inactive Serial Port RS485 No.1</string>
    <string name="serialportactivation1">Active / Inactive Serial Port RS485 No.2</string>
    <string name="serialportactivation2">Active / Inactive Serial Port RS422</string>
    <string name="nodename">Node name</string>
    <string name="destination">Destination</string>
    <string name="tagcount">Tag Count</string>
    <string name="businessname">client Name</string>
    <string name="businessid">client ID</string>
</resources>