<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <com.example.fanp.utils.Shabnambold
            android:layout_width="wrap_content"
            android:text="@string/tagname"
            android:id="@+id/tagname"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"/>

        <com.example.fanp.utils.Shabnambold
            android:layout_width="wrap_content"
            android:text="@string/modbusaddress"
            android:layout_weight="0.5"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_height="match_parent"/>

        <com.example.fanp.utils.Shabnambold
            android:layout_width="wrap_content"
            android:text="@string/tagid"
            android:id="@+id/tagid"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"/>

        <com.example.fanp.utils.Shabnambold
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_height="match_parent"/>


    </LinearLayout>

</LinearLayout>