<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">


    <LinearLayout
        android:id="@+id/lin_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/clientname"
            android:padding="12dp"
            android:hint="@string/clientName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/name"
            android:padding="12dp"
            android:hint="@string/name" />

        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/qos"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:entries="@array/numberto2"
            android:padding="12dp"
            android:textDirection="rtl"/>

        <CheckBox
            android:layout_width="match_parent"
            android:id="@+id/retain"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/retain" />


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:id="@+id/chbprivaite"
            android:padding="12dp"
            android:text="@string/Private" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="21sp" >

            <ImageView
                android:id="@+id/imgadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:padding="2dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>