<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.example.fanp.utils.Shabnambold
            android:id="@+id/txtname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/businessname" />

        <com.example.fanp.utils.Shabnambold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/ip" />

        <com.example.fanp.utils.Shabnambold
            android:id="@+id/txtid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/businessid" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgdelete"
            android:layout_width="35dp"
            android:layout_weight="0.5"
            android:src="@drawable/delete"
            android:layout_height="32dp"/>
        <ImageView
            android:id="@+id/imgedit"
            android:layout_width="35dp"
            android:layout_weight="0.5"
            android:src="@drawable/edit"
            android:layout_height="32dp"/>

    </LinearLayout>

    </LinearLayout>

