<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_main"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.example.fanp.utils.Shabnamlight
        android:id="@+id/tagname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tagname" />

    <com.example.fanp.utils.Shabnamlight
        android:id="@+id/topicname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/topic" />

    <com.example.fanp.utils.Shabnamlight
        android:layout_width="match_parent"
        android:id="@+id/type"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="12dp" >

        <TextView
            android:id="@+id/remove"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:padding="12dp"
            android:background="@drawable/delete"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textColor="#fff"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:id="@+id/edit"
            android:gravity="center"
            android:padding="12dp"
            android:background="@drawable/edit"
            android:layout_marginRight="50dp"/>

    </LinearLayout>

</LinearLayout>